# NextBestView

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  gen3manipulator_base_linkend_effector_link_10000_1.000000_4.000000.ikcache  gen3manipulator_base_linkend_effector_link_5000_1.000000_1.000000.ikcache  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/workflows/: docker-image.yml
src/example_nbv/: CMakeLists.txt  package.xml
src/kinova_action_interfaces/: CMakeLists.txt  package.xml
src/kinova_action_interfaces/action/: ClearFiles.action  ComputeNextbestview.action  Coordinator.action  DetectObject.action  FilterPointCloud.action  MergePointClouds.action  MoveTo.action  MoveToPose.action  NextBestView.action  ProcessTreeData.action  SavePointCloud.action  VoxelMap.action
src/kinova_action_interfaces/srv/: AddCollisionObject.srv  CurrentPose.srv  PoseGenerator.srv  ReachabilityCheck.srv
src/kinova_gen3_6dof_robotiq_2f_85_moveit_config/config/: kinematics.yaml  sensors_3d.yaml
src/kinova_gen3_6dof_robotiq_2f_85_moveit_config/launch/: kortex_moveit.launch.py  move_group.launch.py  robot.launch.py  sim.launch.py  without_rviz.launch.py
src/mission_interface/: package.xml  setup.cfg  setup.py
src/mission_interface/config/: kinova.yaml
src/mission_interface/mission_interface/: behavior_tree.py  mission_decoder.py  mission_interface.py  network_interface.py  tasking.py
src/mission_interface/resource/: schema.xsd
src/next_best_view/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/next_best_view/config/: canopy_volume_params.yaml  collision_object_params.yaml  nbv_params.yaml  nextbestview_compute_params.yaml  nextbestview_params.yaml  octomap_params.yaml  point_cloud_saver_params.yaml  pose_generator_params.yaml  voxel_map_params.yaml
src/next_best_view/include/next_best_view/: collision_object.hpp  moveto.hpp  nextbestview.hpp  pose_generator.hpp  reachability_check.hpp  yolo_detector.hpp
src/next_best_view/launch/: actions.launch.py  canopy_volume.launch.py  collision_object.launch.py  kortex_vision_control.launch.py  llm_planning.launch.py  moveit.launch.py  moveto.launch.py  nextbestview_compute.launch.py  octomap_generate.launch.py  point_cloud_saver.launch.py  pose_generator.launch.py  vision.launch.py  voxel_map.launch.py
src/next_best_view/next_best_view/: object_detection.py
src/next_best_view/scripts/: object_detection.py
src/next_best_view/src/: canopy_volume.cpp  clear_files.cpp  collision_object.cpp  coordinator.cpp  create_point_cloud2.cpp  currentpose.cpp  hello_moveit.cpp  merge_point_clouds.cpp  moveto.cpp  movetopose.cpp  nextbestview.cpp  nextbestview_compute.cpp  object_detection.cpp  octomap_generate.cpp  point_cloud_filter.cpp  point_cloud_publisher.cpp  point_cloud_saver.cpp  pose_generator.cpp  reachability_check.cpp  state_publisher.cpp  voxel_map.cpp
