<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>next_best_view</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melihm.toslak@hotmail.com">mmelihtoslak</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>kinova_action_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>moveit_ros_planning</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>interactive_markers</depend>
  <build_depend>geometric_shapes</build_depend>
  <build_export_depend>geometric_shapes</build_export_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>kinova_gen3_6dof_robotiq_2f_85_moveit_config</exec_depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>rcpputils</depend>
  <depend>octomat_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>octomap_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>CGAL</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
